# m2arm

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  test.yml
cli/: go.mod  main.go
cli/cmd/: migrate.go  plan.go  root.go  scan.go
cli/internal/scanner/: scanner.go
cli/internal/sdk/: types.go
docs/: README.md
examples/cpp-simd/: CMakeLists.txt  README.md  math_utils.cpp  platform.h
sdk/: __init__.py  compiler.py  core.py  migrator.py  optimizer.py  pyproject.toml  requirements.txt  scanner.py  tester.py
